[tool.poetry]
name = "prjlecm"
version = "0.1.2"
description = ""
authors = ["Fan Wang <wangfanbsg75@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
