[tool.poetry]
name = "prjlecm"
version = "0.1.3"
description = ""
authors = ["Fan Wang <wangfanbsg75@live.com>"]
readme = "README.md"
packages = [{include = "prjlecm", from = "src"}]  # ADD THIS LINE


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
pandas = "^2.0"
scipy = "^1.10.1"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
ipykernel = "^6.29.5"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
sphinx-gallery = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
